@@ -1,4 +1,12 @@
+2010-04-05  Andreas Kupries  <andreask@activestate.com>
+
+	* geometry.tcl: Extended API with a number of basic point
+	* geometry.man: and vector operations (+, -, scale, ...).
+	* geometry.test: Updated documentation, testsuite.
+	* pkgIndex.tcl: Bumped to version 1.1.
+
 2010-01-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
+
 	* fuzzy.tcl: [Bug 2933130]. Fixed procedure tlt
 	* fuzzy.test: [Bug 2933130]. Added test for this bug
 	* pkgIndex.tcl: Version increased to 0.2.1
